Fix padding issues, header image wrapping.

--- a/static/site.css
+++ b/static/site.css
@@ -134,14 +134,32 @@ main {
 
 /* ------------------------------------------- Header ------------------------------------------- */
 
+/* TODO: Center image for multiple displays */
 header {
     width: 100vw;
     height: 640px;
+    
+    background-color: #0a0a0a;
 }
 
 #header-promo-200620 {
+    background-color: #0a0a0a;
+    width: 100vw;
+    height: 640px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+#header-promo-200620-img {
+    width: 100vw;
+    height: 100%;
+    position: relative;
+    background-size: cover;
     background: url('./websiteheader200626.png');
+    background-repeat: no-repeat;
     padding: 0px 64px;
+    box-shadow: inset 0px 0px 40px 0px rgba(0, 0, 0, 0.7);
 }
 
 #header-promo-200620-header {
@@ -169,15 +187,15 @@ header {
 /* ----------------------------------------- Content Div ---------------------------------------- */
 
 .contentdiv {
-    width: 100vw;
-    padding: 32px 64px;
+    width: calc(100vw - 128px);
+    padding: 64px 64px;
     min-height: 120px;
     display: flex;
     flex-direction: column;
 }
 
 .cd-type-0 {
-    background-color: var(--dark-1);
+    background-color: #0a0a0a;
 }
 
 .cd-type-1 {
@@ -188,7 +206,7 @@ header {
 
 .feature-wrapper {
     display: flex;
-    width: 90%;
+    width: 100%;
     margin: 32px 0px;
 }
 
@@ -210,7 +228,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 90%;
+    width: 100%;
 }
 
 #ixefeatures img {
@@ -281,7 +299,7 @@ header {
 /* ------------------------------------------ Box Grid ------------------------------------------ */
 
 .boxgrid {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -292,7 +310,7 @@ header {
     display: flex;
     flex-direction: column;
     width: 320px;
-    background-color: none;
+    background-color: var(--dark-1);
     border-radius: 8px;
     min-height: 320px;
     margin: 8px 0px 8px 0px;
@@ -366,7 +384,7 @@ header {
 
 .boxgrid-more {
     display: flex;
-    width: 90%;
+    width: 100%;
     align-items: center;
     justify-content: center;
     margin-top: 32px;
@@ -381,7 +399,7 @@ header {
 .pricing-container {
     display: flex;
     flex-direction: row;
-    width: 92%;
+    width: 100%;
     align-items: center;
     justify-content: space-around;
 }
